--- a/client/static/css/chat.css
+++ b/client/static/css/chat.css
@@ -1,21 +1,113 @@
-.bg {
-    background-color: rgb(50, 50, 50);
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #1a1a1a; 
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.container {
-    width: 100%;
-    height: 97.5vh;
+
+.chat-container {
+    width: 60%;
+    max-width: 1200px;
+    height: 80vh;
+    background-color: #2c2c2c;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
-iframe {
+
+.chat-header {
+    background-color: #292929; 
+    color: #fff;
+    padding: 7px;
+    text-align: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.chat-messages {
+    list-style-type: none;
+    padding: 20px;
+    margin: 0;
+    flex-grow: 1;
+    overflow-y: auto;
+    background-color: #1e1e1e; 
+    display: flex; 
+    flex-direction: column;
+}
+
+.chat-messages li {
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 60%;
+    word-wrap: break-word;
+    color: #f1f1f1;
+    display: flex;
+    align-self: flex-start; 
+}
+
+.chat-messages .message.sent {
+    background-color: #5d4037;
+    align-self: flex-end;
+}
+
+.chat-messages .message.received {
+    background-color: #424242;
+    align-self: flex-start;
+}
+
+.chat-form {
+    display: flex;
+    padding: 15px;
+    border-top: 1px solid #444;
+    background-color: #292929; 
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.chat-form input {
+    flex-grow: 1;
+    border: 1px solid #555; 
+    border-radius: 5px;
+    padding: 15px;
+    font-size: 1em;
+    margin-right: 10px;
+    background-color: #424242; 
+    color: #fff; 
+}
+
+.chat-form button {
+    background-color: #5d4037;
+    color: white;
     border: none;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    background-color: white;
-    min-width: 200px;
-    flex: 1;
-    height: 100%;
-    width: 100%;
+    border-radius: 5px;
+    padding: 15px 20px;
+    font-size: 1em;
+    cursor: pointer;
 }
-.result {
-    font-style:italic;
-    color: antiquewhite;
+
+.chat-form button:hover {
+    background-color: #3e2723; 
+}
+
+.chat-messages::-webkit-scrollbar {
+    width: 8px;
+}
+
+.chat-messages::-webkit-scrollbar-track {
+    background: #333;
+}
+
+.chat-messages::-webkit-scrollbar-thumb {
+    background: #666; 
+    border-radius: 10px;
+}
+
+.chat-messages::-webkit-scrollbar-thumb:hover {
+    background: #888; 
 }
